# spdm-lib

./: .licenserc.yaml  CHANGELOG-CALIPTRA.txt  CLEANUP_SUMMARY.md  COMPILATION_README.md  Cargo.toml  README.md  SPDM_INTEGRATION_SUMMARY.md
.github/workflows/: build-emu.yml  ci.yml  license.yml  verification.yml
examples/: DMTF_COMPATIBILITY.md  README.md  basic_responder.rs  spdm_requester.rs  spdm_responder.rs  spdm_responder_dmtf.rs  spdm_responder_real.rs  spdm_responder_simple.rs  spdm_tcp_direct.rs  test_static_certs.rs
examples/platform/: cert_store.rs  certs.rs  crypto.rs  evidence.rs  mod.rs  socket_transport.rs
src/: cert_store.rs  chunk_ctx.rs  codec.rs  context.rs  error.rs  lib.rs  platform_impl.rs  requester.rs  state.rs  test.rs  transcript.rs  transport.rs
src/commands/: algorithms_rsp.rs  capabilities_rsp.rs  certificate_rsp.rs  challenge_auth_rsp.rs  chunk_get_rsp.rs  digests_rsp.rs  error_rsp.rs  measurements_rsp.rs  mod.rs  version_rq.rs  version_rsp.rs
src/commands/algorithms/: mod.rs  request.rs  response.rs
src/commands/capabilities/: mod.rs  request.rs  response.rs
src/commands/certificate/: mod.rs  request.rs  response.rs
src/commands/challenge/: mod.rs  request.rs  response.rs
src/commands/digests/: mod.rs  request.rs  response.rs
src/commands/measurements/: mod.rs  request.rs  response.rs
src/commands/version/: mod.rs  request.rs  response.rs
src/measurements/: common.rs  freeform_manifest.rs  mod.rs
src/platform/: evidence.rs  hash.rs  mod.rs  rng.rs  transport.rs
src/platform-impl/linux/: certs.rs  evidence.rs  rng.rs  tcp.rs
src/platform_impl/: certs.rs  mod.rs
src/platform_impl/linux/: certs.rs  evidence.rs  hash.rs  mod.rs  rng.rs  tcp.rs
src/protocol/: algorithms.rs  capabilities.rs  certs.rs  common.rs  mod.rs  signature.rs  version.rs
src/requester/: context.rs
tests/: spdm_validator_host.rs
