# Licensed under the Apache-2 = 

[package]
name = "spdm-lib"
version = "0.1.0"
authors = ["Caliptra contributors", "OpenPRoT contributors"]
edition = "2021"

[features]
default = []
crypto = []

[dependencies]
bitfield = "0.14.0"
zerocopy = { version = "0.8.17", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
# Cryptographic dependencies
sha2 = { version = "0.10"}
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
digest = { version = "0.10"}

# Examples
[[example]]
name = "spdm_responder"
path = "examples/spdm_responder.rs"
required-features = ["crypto"]

[[example]]
name = "test_static_certs"
path = "examples/test_static_certs.rs"
